Parcial2/parcial2/Punto3/fourierParser.py
# Generated from fourier.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fourierParser ( Parser ):

    grammarFileName = "fourier.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'f('", "'/'", "')'", "'='", "'{'", "'}'", 
                     "'sign('", "'u('", "'d('", "'cos('", "'+'", "'-'", 
                     "'*'", "'sin('", "'SUM( inf, n = -inf , d('", "'-n'", 
                     "'))'", "'('", "','", "'0'", "'1'", "'>'", "'-1'", 
                     "'<'", "'<='", "'>='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'rect'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT1", "VAR", 
                      "VARN", "ID", "RECT", "INT", "FLOAT", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_start = 1
    RULE_function = 2
    RULE_parameters = 3
    RULE_parameters1 = 4
    RULE_parameters2 = 5
    RULE_parameters3 = 6
    RULE_inr = 7
    RULE_inr2 = 8
    RULE_inr3 = 9
    RULE_inr4 = 10
    RULE_inr5 = 11
    RULE_comp_operator = 12

    ruleNames =  [ "prog", "start", "function", "parameters", "parameters1", 
                   "parameters2", "parameters3", "inr", "inr2", "inr3", 
                   "inr4", "inr5", "comp_operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    INT1=27
    VAR=28
    VARN=29
    ID=30
    RECT=31
    INT=32
    FLOAT=33
    NEWLINE=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def start(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fourierParser.StartContext)
            else:
                return self.getTypedRuleContext(fourierParser.StartContext,i)


        def getRuleIndex(self):
            return fourierParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = fourierParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.start()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 51074) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(fourierParser.FunctionContext,0)


        def NEWLINE(self):
            return self.getToken(fourierParser.NEWLINE, 0)

        def getRuleIndex(self):
            return fourierParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = fourierParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.function()
            self.state = 32
            self.match(fourierParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fourierParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TriangContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parameters1(self):
            return self.getTypedRuleContext(fourierParser.Parameters1Context,0)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def VARN(self):
            return self.getToken(fourierParser.VARN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriang" ):
                listener.enterTriang(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriang" ):
                listener.exitTriang(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriang" ):
                return visitor.visitTriang(self)
            else:
                return visitor.visitChildren(self)


    class DContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterD" ):
                listener.enterD(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitD" ):
                listener.exitD(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitD" ):
                return visitor.visitD(self)
            else:
                return visitor.visitChildren(self)


    class UContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def parameters3(self):
            return self.getTypedRuleContext(fourierParser.Parameters3Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU" ):
                listener.enterU(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU" ):
                listener.exitU(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU" ):
                return visitor.visitU(self)
            else:
                return visitor.visitChildren(self)


    class CosContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def VARN(self):
            return self.getToken(fourierParser.VARN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCos" ):
                listener.enterCos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCos" ):
                listener.exitCos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCos" ):
                return visitor.visitCos(self)
            else:
                return visitor.visitChildren(self)


    class SinContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def VARN(self):
            return self.getToken(fourierParser.VARN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSin" ):
                listener.enterSin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSin" ):
                listener.exitSin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSin" ):
                return visitor.visitSin(self)
            else:
                return visitor.visitChildren(self)


    class SignContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def parameters2(self):
            return self.getTypedRuleContext(fourierParser.Parameters2Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSign" ):
                listener.enterSign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSign" ):
                listener.exitSign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSign" ):
                return visitor.visitSign(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def VARN(self):
            return self.getToken(fourierParser.VARN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum" ):
                listener.enterSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum" ):
                listener.exitSum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)


    class RectaContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fourierParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parameters(self):
            return self.getTypedRuleContext(fourierParser.ParametersContext,0)

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)
        def VARN(self):
            return self.getToken(fourierParser.VARN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecta" ):
                listener.enterRecta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecta" ):
                listener.exitRecta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecta" ):
                return visitor.visitRecta(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = fourierParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = fourierParser.RectaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(fourierParser.T__0)
                self.state = 39
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 35
                    self.match(fourierParser.VAR)
                    pass

                elif la_ == 2:
                    self.state = 36
                    self.match(fourierParser.VAR)
                    self.state = 37
                    self.match(fourierParser.T__1)
                    self.state = 38
                    self.match(fourierParser.VARN)
                    pass


                self.state = 41
                self.match(fourierParser.T__2)
                self.state = 42
                self.match(fourierParser.T__3)
                self.state = 43
                self.match(fourierParser.T__4)
                self.state = 44
                self.parameters()
                self.state = 45
                self.match(fourierParser.T__5)
                pass

            elif la_ == 2:
                localctx = fourierParser.TriangContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(fourierParser.T__0)
                self.state = 52
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.match(fourierParser.VAR)
                    pass

                elif la_ == 2:
                    self.state = 49
                    self.match(fourierParser.VAR)
                    self.state = 50
                    self.match(fourierParser.T__1)
                    self.state = 51
                    self.match(fourierParser.VARN)
                    pass


                self.state = 54
                self.match(fourierParser.T__2)
                self.state = 55
                self.match(fourierParser.T__3)
                self.state = 56
                self.match(fourierParser.T__4)
                self.state = 57
                self.parameters1()
                self.state = 58
                self.match(fourierParser.T__5)
                pass

            elif la_ == 3:
                localctx = fourierParser.SignContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.match(fourierParser.T__6)
                self.state = 61
                self.match(fourierParser.VAR)
                self.state = 62
                self.match(fourierParser.T__2)
                self.state = 63
                self.match(fourierParser.T__3)
                self.state = 64
                self.match(fourierParser.T__4)
                self.state = 65
                self.parameters2()
                self.state = 66
                self.match(fourierParser.T__5)
                pass

            elif la_ == 4:
                localctx = fourierParser.UContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.match(fourierParser.T__7)
                self.state = 69
                self.match(fourierParser.VAR)
                self.state = 70
                self.match(fourierParser.T__2)
                self.state = 71
                self.match(fourierParser.T__3)
                self.state = 72
                self.match(fourierParser.T__4)
                self.state = 73
                self.parameters3()
                self.state = 74
                self.match(fourierParser.T__5)
                pass

            elif la_ == 5:
                localctx = fourierParser.DContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(fourierParser.T__8)
                self.state = 77
                self.match(fourierParser.VAR)
                self.state = 78
                self.match(fourierParser.T__2)
                pass

            elif la_ == 6:
                localctx = fourierParser.CosContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.match(fourierParser.T__9)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29:
                    self.state = 80
                    self.match(fourierParser.VARN)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14340) != 0):
                        self.state = 81
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14340) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()




                self.state = 86
                self.match(fourierParser.VAR)
                self.state = 87
                self.match(fourierParser.T__2)
                pass

            elif la_ == 7:
                localctx = fourierParser.SinContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.match(fourierParser.T__13)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29:
                    self.state = 89
                    self.match(fourierParser.VARN)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14340) != 0):
                        self.state = 90
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14340) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()




                self.state = 95
                self.match(fourierParser.VAR)
                self.state = 96
                self.match(fourierParser.T__2)
                pass

            elif la_ == 8:
                localctx = fourierParser.SumContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.match(fourierParser.T__14)
                self.state = 98
                self.match(fourierParser.VAR)
                self.state = 99
                self.match(fourierParser.T__15)
                self.state = 100
                self.match(fourierParser.VARN)
                self.state = 101
                self.match(fourierParser.T__16)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fourierParser.InrContext)
            else:
                return self.getTypedRuleContext(fourierParser.InrContext,i)


        def getRuleIndex(self):
            return fourierParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = fourierParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(fourierParser.T__17)
            self.state = 105
            self.inr()
            self.state = 106
            self.match(fourierParser.T__2)
            self.state = 107
            self.match(fourierParser.T__18)
            self.state = 108
            self.match(fourierParser.T__17)
            self.state = 109
            self.inr()
            self.state = 110
            self.match(fourierParser.T__2)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 111
                self.match(fourierParser.T__18)
                self.state = 112
                self.match(fourierParser.T__17)
                self.state = 113
                self.inr()
                self.state = 114
                self.match(fourierParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameters1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inr2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fourierParser.Inr2Context)
            else:
                return self.getTypedRuleContext(fourierParser.Inr2Context,i)


        def getRuleIndex(self):
            return fourierParser.RULE_parameters1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters1" ):
                listener.enterParameters1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters1" ):
                listener.exitParameters1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters1" ):
                return visitor.visitParameters1(self)
            else:
                return visitor.visitChildren(self)




    def parameters1(self):

        localctx = fourierParser.Parameters1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(fourierParser.T__17)
            self.state = 119
            self.inr2()
            self.state = 120
            self.match(fourierParser.T__2)
            self.state = 121
            self.match(fourierParser.T__18)
            self.state = 122
            self.match(fourierParser.T__17)
            self.state = 123
            self.inr2()
            self.state = 124
            self.match(fourierParser.T__2)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 125
                self.match(fourierParser.T__18)
                self.state = 126
                self.match(fourierParser.T__17)
                self.state = 127
                self.inr2()
                self.state = 128
                self.match(fourierParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameters2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inr3(self):
            return self.getTypedRuleContext(fourierParser.Inr3Context,0)


        def inr4(self):
            return self.getTypedRuleContext(fourierParser.Inr4Context,0)


        def getRuleIndex(self):
            return fourierParser.RULE_parameters2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters2" ):
                listener.enterParameters2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters2" ):
                listener.exitParameters2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters2" ):
                return visitor.visitParameters2(self)
            else:
                return visitor.visitChildren(self)




    def parameters2(self):

        localctx = fourierParser.Parameters2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameters2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(fourierParser.T__17)
            self.state = 133
            self.inr3()
            self.state = 134
            self.match(fourierParser.T__2)
            self.state = 135
            self.match(fourierParser.T__18)
            self.state = 136
            self.match(fourierParser.T__17)
            self.state = 137
            self.inr4()
            self.state = 138
            self.match(fourierParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameters3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inr3(self):
            return self.getTypedRuleContext(fourierParser.Inr3Context,0)


        def inr5(self):
            return self.getTypedRuleContext(fourierParser.Inr5Context,0)


        def getRuleIndex(self):
            return fourierParser.RULE_parameters3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters3" ):
                listener.enterParameters3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters3" ):
                listener.exitParameters3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters3" ):
                return visitor.visitParameters3(self)
            else:
                return visitor.visitChildren(self)




    def parameters3(self):

        localctx = fourierParser.Parameters3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameters3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(fourierParser.T__17)
            self.state = 141
            self.inr3()
            self.state = 142
            self.match(fourierParser.T__2)
            self.state = 143
            self.match(fourierParser.T__18)
            self.state = 144
            self.match(fourierParser.T__17)
            self.state = 145
            self.inr5()
            self.state = 146
            self.match(fourierParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)

        def comp_operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fourierParser.Comp_operatorContext)
            else:
                return self.getTypedRuleContext(fourierParser.Comp_operatorContext,i)


        def INT1(self, i:int=None):
            if i is None:
                return self.getTokens(fourierParser.INT1)
            else:
                return self.getToken(fourierParser.INT1, i)

        def getRuleIndex(self):
            return fourierParser.RULE_inr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInr" ):
                listener.enterInr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInr" ):
                listener.exitInr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInr" ):
                return visitor.visitInr(self)
            else:
                return visitor.visitChildren(self)




    def inr(self):

        localctx = fourierParser.InrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_inr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 149
            self.match(fourierParser.T__18)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 150
                self.match(fourierParser.INT1)
                self.state = 151
                self.comp_operator()


            self.state = 154
            self.match(fourierParser.VAR)
            self.state = 155
            self.comp_operator()
            self.state = 156
            self.match(fourierParser.INT1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(fourierParser.VAR)
            else:
                return self.getToken(fourierParser.VAR, i)

        def comp_operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fourierParser.Comp_operatorContext)
            else:
                return self.getTypedRuleContext(fourierParser.Comp_operatorContext,i)


        def VARN(self, i:int=None):
            if i is None:
                return self.getTokens(fourierParser.VARN)
            else:
                return self.getToken(fourierParser.VARN, i)

        def INT(self):
            return self.getToken(fourierParser.INT, 0)

        def getRuleIndex(self):
            return fourierParser.RULE_inr2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInr2" ):
                listener.enterInr2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInr2" ):
                listener.exitInr2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInr2" ):
                return visitor.visitInr2(self)
            else:
                return visitor.visitChildren(self)




    def inr2(self):

        localctx = fourierParser.Inr2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inr2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 159
                self.match(fourierParser.T__11)
                self.state = 160
                self.match(fourierParser.VAR)
                pass
            elif token in [28]:
                self.state = 161
                self.match(fourierParser.VAR)
                self.state = 162
                self.match(fourierParser.T__1)
                self.state = 163
                self.match(fourierParser.VARN)
                pass
            elif token in [19]:
                pass
            else:
                pass
            self.state = 166
            self.match(fourierParser.T__18)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 167
                self.match(fourierParser.INT)
                self.state = 168
                self.comp_operator()


            self.state = 171
            self.match(fourierParser.VAR)
            self.state = 172
            self.comp_operator()
            self.state = 173
            self.match(fourierParser.VARN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inr3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(fourierParser.VAR, 0)

        def getRuleIndex(self):
            return fourierParser.RULE_inr3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInr3" ):
                listener.enterInr3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInr3" ):
                listener.exitInr3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInr3" ):
                return visitor.visitInr3(self)
            else:
                return visitor.visitChildren(self)




    def inr3(self):
